Fix footer being covered by content

--- a/assets/scss/custom/misc.scss
+++ b/assets/scss/custom/misc.scss
@@ -7,6 +7,7 @@ body {
 .body {
   margin-top: -30px;
   background: $bg-soft;
+  margin-bottom: 150px;
 
   .container {
     z-index: 2;
